# miscellaneous

./: .gitignore  LICENSE  README.md  requirements.txt  scratch_finance.py
clean_moodle/: README.md  clean_moodle.js  manifest.json
coding_problems/: array_with_unique_chars.py  best_time_to_buy_and_sell_stock.py  contains_duplicate.py  count_say.py  delete_node_in_a_linked_list.py  first_unique_character.py  game_of_life.py  implement_strStr.py  intersection_of_two_arrays.py  k_closest_to_centre.py  longest_common_prefix.py  longest_palindromic_substring.py  max_array_sum.py  median_of _two _sorted_arrays.py  move_zeros.py  palindrome_number.py  plus_one.py  reach_the_end_in_time.py  remove_duplicates_from_sorteda_array.py  remove_nth_node_from_end_of_list.py  reverse_integer.py  reverse_string.py  rotate_array.py  rotate_image.py  single_number.py  string_permutations.py  string_to_integer.py  two_sum.py  valid_anagram.py  valid_palindrome.py  valid_sudoku.py  zigzag_conversion.py
data_structures/: interval_tree.py
get_google_playground/: README.md  index.html  stich_images.py
go_docker_talk/: README.md  container.go
manager-client-flutter-app/: README.md
manager-client-flutter-app/backend/: pyproject.toml
manager-client-flutter-app/backend/backend/: main.py
mini_programs/: black_hole.py  csv_streamer.py  save_ids_to_csv.py
mini_programs/black_hole/: README.md  black_hole.py
mini_programs/existential_forgery_example/: existential_forgery_example.py
scripts/: docker_install_ubuntu_18.04.sh  rabbitmq_bionic_install.sh
(+5 files in other folders)
