[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nescobaraloplop <17679385+NescobarAlopLop@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
black = "^24.4.2"
isort = "^5.13.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
